<resources>
    <string name="app_name">KTU Studentams</string>

    <string name="loading">Kraunasi&#8230;</string>
    <string name="please_wait">Prašome palaukti</string>

    <string name="username">Prisijungimo vardas</string>
    <string name="password">Slaptažodis</string>
    <string name="login">Prisijungti</string>

    <string name="enter_username">Įrašykite prisijungimo vardą</string>
    <string name="enter_password">Įrašykite slaptažodį</string>
    <string name="incorrect_username_or_password">Neteisingas prisijungimo vardas arba slaptažodis</string>
    <string name="no_internet">Nėra interneto</string>
    <string name="login_failure">Prisijungimo klaida. Prašome pabandyti vėliau</string>

    <string name="drawer_schedule">Tvarkaraštis</string>
    <string name="drawer_grade">Pažymiai</string>
    <string name="drawer_choose_time_for_classes">Užsirašymas į užsiėmimus</string>
    <string name="drawer_options">Nustatymai</string>
    <string name="drawer_moodle">Moodle naršyklėje</string>
    <string name="drawer_logout">Atsijungti </string>

    <string name="settings_default_fragment_title">Pradinis ekranas</string>
    <string name="settings_scraper_timer_title">Atnaujinimų intervalas</string>
    <string name="settings_notification_category">Pranešimų nustatymai</string>
    <string name="settings_notification_on_off_title">Pranešimai</string>
    <string name="settings_notification_summary">Įjungti arba išjungti pranešimus</string>

    <string name="spinner_title">Pasirinkite metus</string>
    <string name="grades_explanation">Paaiškinimas</string>
    <string name="grades_weekNum">Nr.</string>
    <string name="grades_grade11">1</string>
    <string name="grades_grade2">2</string>
    <string name="grades_grade3">3</string>

    <string-array name="years">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
    </string-array>
    <string-array name="modules">
        <item>Objektinis programavimas</item>
        <item>Duomenų bazės</item>
        <item>Informatika</item>
        <item>Tikimybių teorija</item>
    </string-array>

    <string-array name="settings_default_fragments">
        <item>@string/drawer_schedule</item>
        <item>@string/drawer_grade</item>
        <item>@string/drawer_choose_time_for_classes</item>
    </string-array>

    <string-array name="settings_scraper_timer">
        <item>5 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>1 val</item>
        <item>3 val</item>
        <item>5 val</item>
    </string-array>

    <string-array name="settings_scraper_timer_values">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>300</item>
    </string-array>

    <string name="navigation_drawer_open">Atidaryti šoninį meniu</string>
    <string name="navigation_drawer_close">Uždaryti šoninį meniu</string>

</resources>
