<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_test_1"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    tools:context="lt.chocolatebar.ktustudentams.activities.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ktu_studentams_logo_app" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/username_marginTop"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/password_marginTop"
        android:gravity="center"
        android:hint="@string/password"
        android:imeOptions="actionGo"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_marginTop"
        android:background="@android:color/transparent"
        android:text="@string/login"
        android:textSize="@dimen/login_textSize" />

</LinearLayout>
